# headlessauth

./: Cargo.toml
src/: commonio.rs  discord.rs  main.rs  repeat.rs  web.rs
src/discord/: admin.rs  checks.rs  closedwhitelist.rs  common.rs  mainwhitelist.rs
