[package]
name = "headlessauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
directories = "5.0.1"
fs4 = {version = "0.7.0", features = ["tokio"]}
poise = "0.5.7"
reqwest = {version = "0.11.22", features = ["json"]}
serde = "1.0.190"
serde_json = "1.0.107"
tokio = {version = "1.33.0", features = ["rt-multi-thread", "io-util"]}
